696 -  SF